Fix element spacing for challenges

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,4 +22,5 @@ button {
 input[type=file] {
     display: inline;
     margin-left: 5px;
+    margin-bottom:10px;
 }
